Fix for dropbox button in particular on small screens

--- a/static/scss/download.scss
+++ b/static/scss/download.scss
@@ -102,6 +102,10 @@
     margin: 0px 10px;
 }
 
+.dropbox_download_option {
+    min-width: 122px;
+}
+
 @include breakpoint (small down) {
     .download_option > * {
         flex: 1 1 0;
